--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ uvicorn[standard]==0.34.0
 
 pydantic==2.10.6
 pydantic-settings==2.8.1
+pydantic[email]
 
 sqlalchemy==2.0.37
 asyncpg==0.30.0
+psycopg2-binary
 alembic==1.14.0
 
 python-jose==3.3.0
@@ -22,3 +24,5 @@ openai==1.61.0
 pinecone==5.4.2
 
 tenacity==9.0.0
+
+python-dotenv
