--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 
@@ -24,5 +26,10 @@ openai==1.61.0
 pinecone==5.4.2
 
 tenacity==9.0.0
+
+sentence-transformers==3.3.1
+torch
+requests==2.32.3
+
 
 python-dotenv
